implementação do swagger

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pg": "^8.8.0",
     "sequelize": "^6.25.7",
     "sqlite3": "^5.1.2",
+    "swagger-ui-express": "^4.6.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
